--- a/backend/views/index.hbs
+++ b/backend/views/index.hbs
@@ -5,5 +5,12 @@
 </head>
 <body>
     <h1>Biological Notes</h1>
+    {{#each pdfs}}
+        <div>
+            <a href="/pdfs/{{file}}">{{name}}</a>
+            <p>{{description}}</p>
+            <br/>
+        </div>
+    {{/each}}
 </body>
 </html>
